--- a/Lesson 2/Lesson/tom05.10/tom1.css
+++ b/Lesson 2/Lesson/tom05.10/tom1.css
@@ -63,7 +63,7 @@ a {
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: transparent;
     top: 0px;
     left: 100%;
     z-index: 15;
@@ -77,6 +77,7 @@ a {
     height: 100vh;
     right: 0;
     position: absolute;
+    box-shadow: -14px 1px 36px -4px rgba(0, 0, 0, 0.75);
 
 }
 
