--- a/dom/picture.css
+++ b/dom/picture.css
@@ -15,7 +15,7 @@
 .img-container {
     width: 400px;
     height: 400px;
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     position: relative;
     transition: 1s;
