--- a/form/form.css
+++ b/form/form.css
@@ -132,10 +132,10 @@ body {
 
 .zindex1 {
     z-index: 1;
-    transition: 2s;
+    transition: 1s ease-in-out;
 }
 
 .zindex2 {
     z-index: 2;
-    transition: 2s;
+    transition: 1s ease-in-out;
 }
