--- a/modal/modal1.css
+++ b/modal/modal1.css
@@ -3,14 +3,59 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.container-inner>:first-child{
+    display: flex;
+    align-items: center;
+}
+.flex{
+    display: flex;
+}
+.column{
+    flex-direction: column;
+}
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #eee;
+    background-color: #191919;
     padding: 32px;
     gap: 24px;
+}
+.out-container{
+    display: flex;
+    gap: 24px;
+    flex-direction: column;
+}
+.container {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+}
+.container>div {
+    width: 25%;
+    min-height: 500px;
+    max-height: fit-content;
+    background-color:rgba(16, 16, 16, 1);
+    border-radius: 5px;
+    border: 1px solid white;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.container-inner{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+.container>div>div{
+    color: #fff;
+}
+.open-modal-btn-container{
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
 }
 
 .modal-container {
@@ -29,7 +74,7 @@ body {
 .modal {
     padding: 24px;
     border-radius: 8px;
-    background-color: #fff;
+    background-color: rgba(26, 26, 26, 1);
 }
 
 .modal-header {
@@ -50,7 +95,6 @@ form .modal-header {
 }
 
 input {
-    max-width: 200px;
     width: 100%;
     padding: 8px;
     border: 1px solid #ddd;
@@ -59,7 +103,7 @@ input {
 }
 
 textarea {
-    max-width: 200px;
+    height: fit-content;
     width: 100%;
     padding: 8px;
     border: 1px solid #ddd;
@@ -79,7 +123,8 @@ button {
 }
 
 .open-modal-btn {
-    width: 200px;
+    width: 100px;
+    background-color: rgba(0, 163, 0, 1);
 }
 
 .open {
@@ -117,23 +162,26 @@ button {
     align-items: center;
     justify-content: space-between;
     border-radius: 4px;
-    padding: 16px;
+    padding: 8px;
     border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 100%;
 }
-
-.card>div:nth-child(2) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 32px;
-    height: 32px;
+.card>:nth-child(2){
+    width: 80%;
+    border: 1px solid black;
+}
+.checkbox{
+    width: 1.3em;
+    height: 1.3em;
+    background-color: white;
     border-radius: 50%;
+    vertical-align: middle;
+    border: 1px solid #ddd;
+    appearance: none;
+    outline: none;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.1);
+}
+.checkbox:checked {
+    background-color: gray;
 }
 
-.container {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-}
