--- a/homeworks/namu.css
+++ b/homeworks/namu.css
@@ -3,12 +3,13 @@
     padding: 0;
     font-family: sans-serif;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 .out-container {
-    width: 90%;
+    width: 1440px;
     margin: auto;
-    padding: 20px;
+    border: 1px solid red;
 }
 
 .flex {
@@ -21,6 +22,8 @@
 
 .navbar {
     justify-content: space-between;
+    border: 1px solid green;
+    padding: 12px;
 }
 
 .navbar>:nth-child(2)>:first-child>div {
@@ -60,5 +63,170 @@
 
 .signup:hover {
     background-color: rgba(0, 0, 0, 0.7);
+    color: white;
 
+}
+
+/* gogo-oos awaw*/
+.container2-fullimg {
+    margin-top: 24px;
+    width: 300%;
+}
+
+.container2-fullimg>div {
+    width: 100%;
+    height: 531px;
+    position: relative;
+}
+
+.container2-fullimg>div>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.container2-fullimg-img1-text {
+    position: absolute;
+    z-index: 2;
+    right: 162px;
+    bottom: 100px;
+}
+
+.container2-fullimg-img1-text>h1 {
+    width: 204px;
+    height: 114px;
+    color: #FFFFFF;
+    font-size: 31.5px;
+    font-weight: 700;
+}
+
+.container2-fullimg-img1-text>button {
+    padding: 4.5px 22.5px 4.5px 22.5px;
+    background-color: #FFFFFF;
+    color: #AA714A;
+    border: 2.25px solid #AA714A;
+    border-radius: 5.62px;
+    font-size: 18px;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 39.25px;
+    height: 54px;
+}
+
+.container2-fullimg-img1-text>button:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.container2-fullimg-img2-text {
+    position: absolute;
+    z-index: 2;
+    right: 102px;
+    bottom: 100px;
+}
+
+.container2-fullimg-img2-text>h1 {
+    width: 300px;
+    height: 114px;
+    color: black;
+    font-size: 31.5px;
+    font-weight: 700;
+}
+
+.container2-fullimg-img2-text>button {
+    padding: 4.5px 22.5px 4.5px 22.5px;
+    background-color: #FFFFFF;
+    color: #AA714A;
+    border: 2.25px solid #AA714A;
+    border-radius: 5.62px;
+    font-size: 18px;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 39.25px;
+    height: 54px;
+}
+
+.container2-fullimg-img2-text>button:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.container2-fullimg-img3-text {
+    position: absolute;
+    z-index: 2;
+    right: 102px;
+    bottom: 100px;
+}
+
+.container2-fullimg-img3-text>h1 {
+    width: 300px;
+    height: 114px;
+    color: black;
+    font-size: 31.5px;
+    font-weight: 700;
+}
+
+.container2-fullimg-img3-text>button {
+    padding: 4.5px 22.5px 4.5px 22.5px;
+    background-color: #FFFFFF;
+    color: #AA714A;
+    border: 2.25px solid #AA714A;
+    border-radius: 5.62px;
+    font-size: 18px;
+    text-align: center;
+    font-weight: 500;
+    margin-top: 39.25px;
+    height: 54px;
+}
+
+.container2-fullimg-img3-text>button:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.container2-fullimg {
+    display: flex;
+
+}
+
+.container2-fullimg>div {
+    width: 1440px;
+}
+
+@keyframes imgFade {
+    0% {
+        transform: translateX(0%);
+    }
+
+    16.66% {
+        transform: translateX(0px);
+    }
+
+    33.33% {
+        transform: translateX(-1440px);
+    }
+
+    50% {
+        transform: translateX(-1440px);
+    }
+
+    66.66% {
+        transform: translateX(-2880px);
+    }
+
+    83.33% {
+        transform: translateX(-2880px);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.container2-fullimg {
+    animation-name: imgFade;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-duration: 9s;
+}
+
+.container2 {
+    overflow: hidden;
 }
