--- a/homeworks/namu.css
+++ b/homeworks/namu.css
@@ -230,3 +230,37 @@
 .container2 {
     overflow: hidden;
 }
+.container3 {
+    display: flex;
+}
+.container3-inner{
+    width: 1280px;
+    height: 472px;
+    margin: auto;
+    margin-top: 50px;
+    background-color: rgba(248, 241, 231, 1);
+    display: flex;
+    border-radius: 20px;
+    margin-bottom: 40px;
+
+}
+.container3-inner>div{
+    display: flex;
+    flex: 1;
+}
+.container3-inner>div>button {
+    padding: 4.5px 22.5px 4.5px 22.5px;
+    background-color: #FFFFFF;
+    color: #AA714A;
+    border: 2.25px solid #AA714A;
+    border-radius: 5.62px;
+    font-size: 18px;
+    text-align: center;
+    font-weight: 500;
+    height: 54px;
+    width: 173px;
+}
+
+.container3-inner>div>button:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+}
